--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
       <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>These are some of the skills I developed in past years!</p>
       </div>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
