--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
             <div>
               <h4 class="title"><a href="service-details.html" class="stretched-link">Generative AI Blog Website</a></h4>
-              <p class="description">Out of sheer interest of a loved one in content writing, the project was developed to personalize and upgrade blogging experience by powering it with Generative AI Technology</p>
+              <p class="description">Out of my sheer interest in content writing, the project was developed to personalize and upgrade blogging experience by powering it with Generative AI Technology</p>
             </div>
           </div>
 
